--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,8 @@
   "dependencies": {
     "@prisma/client": "^4.7.0",
     "@types/express": "^4.17.14",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "type": "module"
 }
