--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/marvinrgb/project-management-system#readme",
   "devDependencies": {
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^18.11.10",
     "prisma": "^4.7.0",
     "ts-node": "^10.9.1",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.14",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
   },
   "type": "module"
