--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
   "dependencies": {
     "@prisma/client": "^4.7.0",
     "@types/express": "^4.17.14",
+    "@types/express-jwt": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-jwt": "^6.1.0",
+    "express-unless": "^2.1.3",
+    "jwks-rsa": "^3.0.0",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   },
   "type": "module"
